--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -91,12 +91,11 @@ input::-webkit-input-placeholder {
   background: transparent; /* make scrollbar transparent */
 }
 
-
-ul { 
-  list-style-type: none; 
+ul {
+  list-style-type: none;
 }
 
-label{
+label {
   background-color: #2649e4;
   border-radius: 5px;
   padding: 3px;
@@ -104,9 +103,9 @@ label{
   color: rgb(58, 34, 34);
 }
 
-.toc ul>li {
+.toc ul > li {
   margin: 5px;
-  margin-top:10px ;
+  margin-top: 10px;
   /* padding-: 1px; */
   border: 1px solid rgb(151, 177, 164);
   border-radius: 8px;
@@ -115,13 +114,13 @@ label{
   padding-left: 5px;
   background-color: rgb(225, 226, 225);
 }
-.toc ul>li>a{
+.toc ul > li > a {
   font-size: 16px;
   font-family: "Ropa Sans";
   padding-left: 5px;
 }
 
-.toc ul>li>ul>li {
+.toc ul > li > ul > li {
   margin: 5px;
   /* padding-: 1px; */
   border: 1px solid rgb(160, 182, 171);
@@ -132,7 +131,7 @@ label{
   background-color: rgb(247, 219, 210);
 }
 
-.toc ul>li>ul>li>ul>li {
+.toc ul > li > ul > li > ul > li {
   /* margin: 5px; */
   /* padding-: 1px; */
   border: 1px solid rgb(160, 182, 171);
@@ -140,19 +139,17 @@ label{
   font-size: 18px;
   font-family: "Ropa Sans";
   padding-left: 5px;
-  margin-left: 15px!important;
-  margin-right: 15px!important;
+  margin-left: 15px !important;
+  margin-right: 15px !important;
   background-color: rgb(238, 195, 178);
 }
 
-
-.toc li{
+.toc li {
   padding-top: 5px;
   padding-bottom: 5px;
- 
 }
 
-ali>a {
+ali > a {
   margin: 5px;
   /* padding-: 1px; */
   background-color: rgb(247, 219, 210);
@@ -163,32 +160,30 @@ ali>a {
   padding: 5px;
 }
 
-
-
-.docbody img{
+.docbody img {
   /* max-width: 90vw!important; */
   display: block;
-   margin-left: auto;
+  margin-left: auto;
   margin-right: auto;
- /* width: 80%; */
+  /* width: 80%; */
   margin-top: 5px;
   /* padding: 30px; */
   border-radius: 10px;
-  border-color: #000000!important;
-  border-style: solid!important;
-  border-width: 1px!important;
+  border-color: #000000 !important;
+  border-style: solid !important;
+  border-width: 1px !important;
 }
 
-.body-scroll-box{
-  overflow: scroll!important;
-  overflow-y: scroll!important;
-  overflow-x: hidden!important;
+.body-scroll-box {
+  overflow: scroll !important;
+  overflow-y: scroll !important;
+  overflow-x: hidden !important;
   scrollbar-width: 140px;
 }
 
-.docbody  .image-alt{
+.docbody .image-alt {
   color: rgb(103, 131, 119);
-  max-width: 90vw!important;
+  max-width: 90vw !important;
   display: block;
   /* width: 50%; */
   display: flex;
@@ -198,124 +193,119 @@ ali>a {
   font-size: 18px;
 }
 
-
-.docbody hr{
+.docbody hr {
   border: 1px solid rgb(116, 134, 125);
-  margin-top: 20px!important;
-  margin-bottom: 20px!important;
+  margin-top: 20px !important;
+  margin-bottom: 20px !important;
 }
-.tocbody .title{
-  font-size: 24px!important;
+.tocbody .title {
+  font-size: 24px !important;
   font-family: "Ropa Sans";
   padding-left: 25px;
   padding-top: 10px;
 }
 
-.docbody h1{
-  font-size: 48px!important;
+.docbody h1 {
+  font-size: 48px !important;
   font-family: "Ropa Sans";
   padding-left: 1px;
   padding-top: 10px;
   padding-bottom: 10px;
-/* background-color: #08f; */
+  /* background-color: #08f; */
   border-bottom: 1px solid rgb(170, 170, 170);
-  margin-bottom: 23px!important;
+  margin-bottom: 23px !important;
 }
-.docbody h2{
-  font-size: 38px!important;
+.docbody h2 {
+  font-size: 38px !important;
   font-family: "Ropa Sans";
   padding-left: 1px;
   padding-top: 10px;
   padding-bottom: 10px;
-/* background-color: #08f; */
+  /* background-color: #08f; */
   border-bottom: 1px solid rgb(170, 170, 170);
-  margin-bottom: 23px!important;
+  margin-bottom: 23px !important;
 }
 
-.docbody h3{
-  font-size: 34px!important;
+.docbody h3 {
+  font-size: 34px !important;
   font-family: "Ropa Sans";
   padding-left: 25px;
   padding-top: 10px;
   padding-bottom: 20px;
-
 }
 
-.docbody h4{
-  font-size: 28px!important;
+.docbody h4 {
+  font-size: 28px !important;
   font-family: "Ropa Sans";
   padding-left: 1px;
   padding-top: 10px;
   padding-bottom: 10px;
-/* background-color: #08f; */
+  /* background-color: #08f; */
   border-bottom: 1px solid rgb(170, 170, 170);
-  margin-bottom: 23px!important;
+  margin-bottom: 23px !important;
 }
 
-.docbody h5{
-  font-size: 22px!important;
+.docbody h5 {
+  font-size: 22px !important;
   font-family: "Ropa Sans";
   padding-left: 1px;
   padding-top: 10px;
   padding-bottom: 10px;
-/* background-color: #08f; */
+  /* background-color: #08f; */
   border-bottom: 1px solid rgb(170, 170, 170);
-  margin-bottom: 23px!important;
+  margin-bottom: 23px !important;
 }
 
-.docbody h6{
-  font-size: 18px!important;
+.docbody h6 {
+  font-size: 18px !important;
   font-family: "Ropa Sans";
   padding-left: 1px;
   padding-top: 10px;
   padding-bottom: 10px;
-/* background-color: #08f; */
+  /* background-color: #08f; */
   border-bottom: 1px solid rgb(170, 170, 170);
-  margin-bottom: 23px!important;
+  margin-bottom: 23px !important;
 }
 
-
-.docbody ol{
-  margin-top: 20px!important;
-  margin-bottom: 20px!important;
-  margin-left: 20px!important;
+.docbody ol {
+  margin-top: 20px !important;
+  margin-bottom: 20px !important;
+  margin-left: 20px !important;
 }
 
-.docbody ol>li{
+.docbody ol > li {
   margin-left: 20px;
 }
 
-.tocbody ol{
-  margin-top: 20px!important;
-  margin-bottom: 20px!important;
-  margin-left: 20px!important;
+.tocbody ol {
+  margin-top: 20px !important;
+  margin-bottom: 20px !important;
+  margin-left: 20px !important;
 }
 
-.tocbody ol>li{
+.tocbody ol > li {
   margin-left: 20px;
 }
 
 .toc-of-body-all {
-  background-color: rgba(229, 230, 228, 0.61)!important;
+  background-color: rgba(229, 230, 228, 0.61) !important;
   /* border-style: dashed; */
   border-width: 1px;
 }
 
 .controls1 {
-
   background-color: rgb(134, 241, 12);
 }
 
 .toc-of-body-all:hover {
-  background-color: rgb(255, 255, 255)!important;
+  background-color: rgb(255, 255, 255) !important;
   border-style: solid;
   border-width: 1px;
   border-color: #000000;
-
 }
 
-.toc-of-body .active{
-  background-color: #c4cae2AA;
+.toc-of-body .active {
+  background-color: #c4cae2aa;
   border-radius: 6px;
   padding: 5px;
   padding-right: 20px;
@@ -325,7 +315,7 @@ ali>a {
   font-size: 20px;
 }
 
-.toc-of-body .inactive{
+.toc-of-body .inactive {
   /* background-color: #c4cae2AA; */
   border-radius: 6px;
   padding: 5px;
@@ -337,19 +327,18 @@ ali>a {
 
 .collapsed {
   /* border-radius: 10px;   */
-  background-color: rgba(185, 185, 185, 0.904)!important;
+  background-color: rgba(185, 185, 185, 0.904) !important;
 }
 .outer-scroll {
-  
 }
 
-.toc-of-body ul{
+.toc-of-body ul {
   /* height: 50px; */
 }
 
-.expanded{
+.expanded {
   /* background-color: aqua!important; */
-  height: 75vh!important;
+  height: 75vh !important;
 }
 
 .SpinnerOverlay {
@@ -391,4 +380,9 @@ ali>a {
   to {
     -webkit-transform: rotate(360deg);
   }
+}
+.iXkNuT p,
+.bloffC p {
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
 }
